Sidebae icon alignment fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,6 @@
 body {
   font-family: "Cabin", sans-serif;
   background: url("https://static.completionist.me/images/velvet/bg.png");
-  color: #959da6;
 }
 
 ul {
